continue ha implementation